--- a/labs/labs21/index.html
+++ b/labs/labs21/index.html
@@ -196,10 +196,58 @@ Como un castillo probando la resistencia de sus murallas ante distintos proyecti
 
 <h2>Reflexión estratégica</h2>
 <p>
-Comprender el fingerprinting defensivo fortalece la detección temprana.
+El fingerprinting de mecanismos de filtrado representa una capacidad crítica tanto para
+equipos ofensivos como defensivos. Desde una perspectiva estratégica, comprender cómo
+un firewall, IDS o IPS reacciona ante tráfico evasivo permite evaluar la madurez real de
+los controles perimetrales más allá de su simple presencia.
+</p>
+
+<p>
+Este laboratorio demuestra que la seguridad efectiva no depende únicamente de bloquear
+tráfico, sino de hacerlo de forma consistente, observable y resistente a técnicas de
+manipulación deliberada. La identificación de respuestas anómalas, silencios selectivos
+o comportamientos inconsistentes constituye una señal temprana de debilidades en la
+configuración defensiva.
+</p>
+
+<p>
+En términos organizacionales, este tipo de análisis fortalece la toma de decisiones en
+arquitectura de seguridad, monitoreo continuo y respuesta ante amenazas avanzadas,
+permitiendo evolucionar de una defensa reactiva hacia un modelo preventivo y adaptativo.
 </p>
 
 </main>
+
+  <h2>Advertencia y uso responsable</h2>
+<p>
+Este laboratorio ha sido diseñado exclusivamente con fines formativos, técnicos y
+pedagógicos, dentro del marco del proyecto <strong>El Pergamino Digital</strong>.
+Las técnicas, herramientas y procedimientos descritos están orientados al aprendizaje,
+validación de controles defensivos y comprensión del comportamiento de mecanismos de
+seguridad en entornos controlados.
+</p>
+
+<p>
+Bajo ninguna circunstancia el contenido aquí presentado debe aplicarse sobre sistemas
+de producción, infraestructuras reales, redes de terceros o entornos para los cuales no
+se cuente con autorización expresa y documentada. El uso indebido de estas técnicas puede
+derivar en interrupciones de servicio, generación de alertas, impacto operativo,
+responsabilidad legal o sanciones administrativas.
+</p>
+
+<p>
+El autor y el proyecto no se responsabilizan por el uso inapropiado, negligente o no
+autorizado de la información contenida en este laboratorio. Es responsabilidad del
+lector garantizar el cumplimiento de las leyes, normativas internas, políticas de
+seguridad y principios éticos aplicables en su jurisdicción.
+</p>
+
+<p>
+La ciberseguridad profesional se fundamenta en el conocimiento, la ética y el respeto
+por los sistemas y las personas. Este laboratorio debe ser entendido como una herramienta
+de fortalecimiento defensivo y no como un medio de explotación irresponsable.
+</p>
+
 
 <footer class="footer">
   © El Pergamino Digital – Proyecto técnico, formativo y estructural
