--- a/labs/labs22/index.html
+++ b/labs/labs22/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Llama a la hoja de estilos global de tu proyecto -->
-<link rel="stylesheet" href="../..assets/css/styles.css">
+<link rel="stylesheet" href="../../assets/css/styles.css">
+
 </head>
 
 <body>
