--- a/labs/labs23/index.html
+++ b/labs/labs23/index.html
@@ -1,212 +1,145 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Lab 23 – Análisis de evasión avanzada frente a IPS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lab 23 – Detección de IPS y evasión básica</title>
 
-<!-- ===================== -->
-<!-- CSS INTEGRADO -->
-<!-- ===================== -->
-<style>
-:root {
-  --bg: #0b0f14;
-  --panel: #121821;
-  --text: #e6e6e6;
-  --accent: #c9a44c;
-  --border: #2f3540;
-  --font: "Segoe UI", Tahoma, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background: var(--bg);
-  color: var(--text);
-  font-family: var(--font);
-  line-height: 1.6;
-}
-
-/* Navegación */
-.nav {
-  background: var(--panel);
-  border-bottom: 1px solid var(--border);
-  padding: 12px 20px;
-}
-
-.nav a {
-  color: var(--accent);
-  margin-right: 15px;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.nav a:hover {
-  text-decoration: underline;
-}
-
-/* Contenedor */
-.container {
-  max-width: 1100px;
-  margin: 40px auto;
-  padding: 0 20px;
-}
-
-/* Títulos */
-h1 {
-  color: var(--accent);
-  margin-bottom: 5px;
-  font-size: 2rem;
-}
-
-.subtitulo {
-  color: #b9b9b9;
-  font-style: italic;
-  margin-bottom: 30px;
-}
-
-/* Secciones */
-h2 {
-  margin-top: 40px;
-  margin-bottom: 10px;
-  border-left: 4px solid var(--accent);
-  padding-left: 10px;
-  font-size: 1.4rem;
-}
-
-p, ul {
-  margin-bottom: 15px;
-}
-
-ul {
-  margin-left: 20px;
-}
-
-li {
-  margin-bottom: 6px;
-}
-
-/* Código */
-pre {
-  background: #000;
-  border: 1px solid var(--border);
-  padding: 12px;
-  overflow-x: auto;
-  margin-bottom: 20px;
-}
-
-code {
-  color: #7cdcff;
-}
-
-/* Footer */
-footer {
-  margin-top: 60px;
-  padding: 20px;
-  background: var(--panel);
-  border-top: 1px solid var(--border);
-  text-align: center;
-  font-size: 0.9rem;
-  color: #aaa;
-}
-</style>
-
-<!-- ===================== -->
-<!-- JS INTEGRADO -->
-<!-- ===================== -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  console.log("Lab 23 cargado correctamente.");
-
-  // Preparado para futuras funciones
-  // Ej: colapsar secciones, checklist interactivo, etc.
-});
-</script>
-
+  <style>
+    :root { color-scheme: dark; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      margin: 0;
+      padding: 0;
+    }
+    nav {
+      background-color: #1f1f1f;
+      padding: 1em;
+      text-align: center;
+    }
+    nav a {
+      color: #e0e0e0;
+      margin: 0 1em;
+      text-decoration: none;
+    }
+    nav a.activo {
+      font-weight: bold;
+      text-decoration: underline;
+    }
+    h1 {
+      text-align: center;
+      margin-top: 1.5em;
+      color: #ffffff;
+    }
+    .subtitulo {
+      text-align: center;
+      color: #bbbbbb;
+      margin-bottom: 2em;
+    }
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 2em;
+    }
+    section {
+      margin-bottom: 2em;
+    }
+    h2 {
+      color: #90caf9;
+    }
+    code {
+      background-color: #1e1e1e;
+      padding: 0.2em 0.4em;
+      border-radius: 4px;
+      font-family: monospace;
+    }
+    footer {
+      text-align: center;
+      padding: 2em;
+      background-color: #1e1e1e;
+      font-size: 0.9em;
+      color: #aaaaaa;
+    }
+    @media (max-width: 600px) {
+      body { font-size: 1.1em; }
+      h1 { font-size: 1.8em; }
+      .subtitulo { font-size: 1.1em; }
+      nav a { display: block; margin: 0.5em 0; }
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- Navegación -->
-<div class="nav">
-  <a href="../../index.html">Inicio</a>
-  <a href="../index.html">Laboratorios</a>
-  <a href="../../glosario.html">Glosario</a>
-  <a href="../../simulador.html">Simulador</a>
-  <a href="../../modulos.html">Módulos</a>
-</div>
+  <nav>
+    <a href="../../index.html">Inicio</a>
+    <a href="../index.html">Laboratorios</a>
+    <a href="../../glosario.html">Glosario</a>
+    <a href="../../simulador.html">Simulador</a>
+    <a href="../../modulos.html">Módulos</a>
+  </nav>
 
-<!-- Contenido -->
-<div class="container">
+  <header>
+    <h1>Lab 23 – Detección de sistemas de prevención de intrusos (IPS)</h1>
+    <p class="subtitulo">
+      Identificación de mecanismos defensivos y evasión básica de controles de red
+    </p>
+  </header>
 
-<h1>Lab 23 – Análisis de evasión avanzada frente a IPS</h1>
-<p class="subtitulo">
-Detección de patrones defensivos y evaluación del comportamiento del IPS ante tráfico manipulado
-</p>
+  <main>
 
-<h2>Objetivo</h2>
-<p>
-Analizar cómo un sistema de prevención de intrusos (IPS) responde ante técnicas de evasión
-avanzadas, identificando debilidades en la inspección profunda de paquetes y en la
-correlación de eventos.
-</p>
+    <section>
+      <h2>Objetivo</h2>
+      <p>
+        Identificar la presencia de sistemas de prevención de intrusos (IPS) mediante
+        el análisis del comportamiento de la red frente a tráfico evasivo y técnicas
+        de escaneo controladas.
+      </p>
+    </section>
 
-<h2>Alcance y limitaciones</h2>
-<p>
-Este laboratorio se ejecuta únicamente en entornos virtuales controlados. No debe
-aplicarse en redes reales sin autorización expresa.
-</p>
+    <section>
+      <h2>Alcance y limitaciones</h2>
+      <p>
+        Este laboratorio se ejecuta exclusivamente en entornos controlados y
+        máquinas vulnerables diseñadas para entrenamiento. No debe aplicarse
+        en redes de producción.
+      </p>
+    </section>
 
-<h2>Herramientas utilizadas</h2>
-<ul>
-  <li>Nmap</li>
-  <li>hping3</li>
-  <li>Wireshark</li>
-  <li>Snort / Suricata</li>
-</ul>
+    <section>
+      <h2>Herramientas utilizadas</h2>
+      <ul>
+        <li><code>nmap</code></li>
+        <li><code>hping3</code></li>
+      </ul>
+    </section>
 
-<h2>Procedimiento técnico</h2>
+    <section>
+      <h2>Resultados esperados</h2>
+      <p>
+        Detección de respuestas anómalas, bloqueos temporales, resets de conexión
+        o alteraciones en el comportamiento normal del tráfico.
+      </p>
+    </section>
 
-<pre><code>nmap -f --data-length 80 -T1 -p 80,443 192.168.56.20</code></pre>
+    <section>
+      <h2>Reflexión estratégica</h2>
+      <p>
+        Un IPS no siempre se manifiesta como un bloqueo evidente. La verdadera
+        detección requiere observar patrones sutiles, latencias, modificaciones
+        en las respuestas y correlación de eventos.
+      </p>
+    </section>
 
-<pre><code>hping3 -S -p 80 --rand-source 192.168.56.20</code></pre>
+  </main>
 
-<h2>Resultados esperados</h2>
-<ul>
-  <li>Alertas generadas por el IPS</li>
-  <li>Tráfico fragmentado detectado</li>
-  <li>Diferencias entre escaneo estándar y evasivo</li>
-</ul>
-
-<h2>Análisis de resultados</h2>
-<p>
-Los IPS basados en firmas pueden fallar ante tráfico fragmentado o manipulado,
-especialmente si no existe correlación temporal adecuada.
-</p>
-
-<h2>Reflexión estratégica</h2>
-<p>
-La evasión no busca romper la defensa, sino comprenderla. Un IPS efectivo no solo bloquea,
-sino que aprende del comportamiento anómalo. Este laboratorio refuerza la importancia de
-la visibilidad, el contexto y la correlación en la defensa moderna.
-</p>
-
-<h2>Disclaimer de advertencia</h2>
-<p>
-Este laboratorio es exclusivamente educativo. El uso de estas técnicas fuera de entornos
-autorizados puede constituir una infracción legal. El proyecto <strong>El Pergamino Digital</strong>
-no asume responsabilidad por usos indebidos.
-</p>
-
-</div>
-
-<footer>
-© El Pergamino Digital – Proyecto formativo, técnico y estructural en ciberseguridad
-</footer>
+  <footer>
+    <p>
+      El Pergamino Digital · Laboratorios de Ciberseguridad · Uso educativo y ético
+    </p>
+  </footer>
 
 </body>
 </html>
-
