--- a/labs/labs24/index.html
+++ b/labs/labs24/index.html
@@ -194,5 +194,36 @@ LHOST=192.168.1.100 LPORT=4444 -f exe -o payload.exe
 </section>
 
 <section>
-  <h2>Validación
+  <h2>Validación cruzada</h2>
+  <ul>
+    <li>MITRE ATT&CK T1027 – Obfuscated Files or Information</li>
+    <li>CIS Control 10 – Malware Defenses</li>
+    <li>NIST SP 800-83</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Reflexión estratégica</h2>
+  <p>
+    La evasión de antivirus demuestra que la defensa basada solo en firmas es insuficiente.
+    La seguridad efectiva requiere análisis conductual, telemetría y defensa en profundidad.
+  </p>
+</section>
+
+<section>
+  <h2>Disclaimer</h2>
+  <p>
+    Este laboratorio es exclusivamente educativo. Todas las técnicas deben ejecutarse
+    únicamente en entornos controlados y con autorización expresa.
+  </p>
+</section>
+
+</main>
+
+<footer>
+  Proyecto <strong>El Pergamino Digital</strong> · Laboratorio formativo de ciberseguridad
+</footer>
+
+</body>
+</html>
 
